kube/deploy_group.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - image: satriacening/group_project1
          name: go-app
          ports:
            - containerPort: 8000
