kube/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: go-app
